Fix schedule on mobile

--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -518,12 +518,8 @@ main
       margin: auto
       width: 65%
 
-    .event-description
-      flex-direction: column
-      gap: 2em
-
-      section
-        padding: 1em
+      a
+        margin: 0 auto
 
     .place > section
       flex-direction: column
@@ -541,6 +537,14 @@ main
     .become-sponsor
       .contact-sponsor a
         font-size: 1.2em
+
+  #index, #schedule
+    .event-description
+      flex-direction: column
+      gap: 2em
+
+      section
+        padding: 1em
 
   nav
     align-items: flex-start
